--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <title>Best Phone in Peshawar- grap the deal now</title>
+</head>
+<body>
+    <nav class="bg-purple-900 text-white flex justify-between">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHnFeCuxLR3xPr9Ubgcu1vBppVIHFf9W8z_Q&s" class="h-15 py-3 px-8 rounded-2xl" alt="" srcset="">
+        <ul class="py-3 px-30 flex space-x-9 justify-end">
+            <li class=" cursor-pointer">Home</li>
+            <li class=" cursor-pointer">About</li>
+            <li class=" cursor-pointer">Catalouger</li>
+            <li class=" cursor-pointer">Contact Us</li>
+     
+        </ul>
+    </nav>
+    <main class=" bg-purple-100 flex">
+        <div class="main pl-9  py-30 ">
+            <div class="text-3xl ">
+                The Best Phone In The Town
+            </div>
+            <p class="py-3 w-1/3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tenetur iste quam. At est nostrum, expedita eius aperiam ratione vitae, a voluptate fugit corrupti quam pariatur cumque totam omnis ab?</p>
+            <div class="my-3">
+                <button class="bg-purple-900 px-3 py-2 rounded-3xl text-white hover:bg-white hover:text-black mx-2">By Now</button>
+                <button class="bg-purple-900 px-3 py-2  rounded-3xl text-white hover:bg-white hover:text-black mx-2">Contact Now</button>
+            </div>
+        </div>
+        <div class="flex item-center">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSah_Ue7KBL8YXyA2K92hXZTfhhH9RR_j2Hhw&s" class="h-80 py-10" alt="" srcset="">
+        </div>
+    </main>
+</body>
+</html>
+
+////
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gradient-to-r from-red-200 via-red-600 to-red-900">
-    <div  class="w-[300px] h-[300px] border border-2 border-black mx-auto mt-10 bg-gradient-to-r from-green-300 via-purple-600 to-red-900 hover:from-green-700 hover:via-green-500 hover:to-green-300">
-
-    </div>
-    <div  class="w-[300px] h-[300px] border border-2 border-black mx-auto mt-10 bg-gradient-to-r from-green-300 via-transparent to-red-900">
-
-    </div>
-    <div  class="w-[300px] h-[300px] border border-2 border-black mx-auto mt-10 bg-gradient-to-l from-green-700 ">
-
-    </div>
-    <div  class="w-[300px] h-[300px]  mx-auto mt-10 bg-gradient-to-r from-pink-200  shadow-inner shadow-green-900 to-red-900">
-
-    </div>
-    <div  class="w-[300px] h-[300px] shadow-inner shadow-black shadow-[50px] mx-auto mt-10 bg-gradient-to-t from-pink-700    to-green-700">
-
-    </div>
-    <div  class="w-[300px] h-[300px]  mx-auto mt-10 bg-gradient-to-t from-pink-700    to-green-700">
-        <img class="w-full h-full contrast-125 brightness-75" src="../../images/kashmirimg1.avif" alt="">
-    </div>
-    <div  class="w-[300px] h-[300px]  mx-auto mt-10 bg-gradient-to-t from-pink-700    to-green-700">
-        <img class="w-full h-full grayscale contrast-125 brightness-75" src="../../images/kashmirimg1.avif" alt="">
-    </div>
-    <div  class="w-[300px] h-[300px]  mx-auto mt-10 bg-gradient-to-t from-pink-700    to-green-700">
-        <img class="w-full h-full blur-sm" src="../../images/profile.jpg" alt="">
-    </div>
-    <div  class="w-[300px] h-[300px]  mx-auto mt-10 bg-gradient-to-t from-pink-700    to-green-700">
-        <img class="w-full h-full saturate-150 " src="../../images/kashmirimg2.avif" alt="">
-    </div>
-
-    
-  </body>
+</head>
+<body>
+   
+    <nav class="px-4 py-4 bg-purple-900 text-white "><ul class="flex">
+        <li class="mx-2 cursor-pointer">Home</li>
+        <li class="mx-2 cursor-pointer">About</li>
+        <li class="mx-2 cursor-pointer ">Contact</li>
+    </ul></nav>
+</body>
 </html>
