--- a/index.html
+++ b/index.html
@@ -1,54 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <title>Best Phone in Peshawar- grap the deal now</title>
-</head>
-<body>
-    <nav class="bg-purple-900 text-white flex justify-between">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHnFeCuxLR3xPr9Ubgcu1vBppVIHFf9W8z_Q&s" class="h-15 py-3 px-8 rounded-2xl" alt="" srcset="">
-        <ul class="py-3 px-30 flex space-x-9 justify-end">
-            <li class=" cursor-pointer">Home</li>
-            <li class=" cursor-pointer">About</li>
-            <li class=" cursor-pointer">Catalouger</li>
-            <li class=" cursor-pointer">Contact Us</li>
-     
-        </ul>
-    </nav>
-    <main class=" bg-purple-100 flex">
-        <div class="main pl-9  py-30 ">
-            <div class="text-3xl ">
-                The Best Phone In The Town
-            </div>
-            <p class="py-3 w-1/3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tenetur iste quam. At est nostrum, expedita eius aperiam ratione vitae, a voluptate fugit corrupti quam pariatur cumque totam omnis ab?</p>
-            <div class="my-3">
-                <button class="bg-purple-900 px-3 py-2 rounded-3xl text-white hover:bg-white hover:text-black mx-2">By Now</button>
-                <button class="bg-purple-900 px-3 py-2  rounded-3xl text-white hover:bg-white hover:text-black mx-2">Contact Now</button>
-            </div>
-        </div>
-        <div class="flex item-center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSah_Ue7KBL8YXyA2K92hXZTfhhH9RR_j2Hhw&s" class="h-80 py-10" alt="" srcset="">
-        </div>
-    </main>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-////
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   
-    <nav class="px-4 py-4 bg-purple-900 text-white "><ul class="flex">
-        <li class="mx-2 cursor-pointer">Home</li>
-        <li class="mx-2 cursor-pointer">About</li>
-        <li class="mx-2 cursor-pointer ">Contact</li>
-    </ul></nav>
-</body>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
