--- a/css1.html
+++ b/css1.html
@@ -3,81 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css task one </title>
     <style>
-
-        .ak{
-            background-color: darkgoldenrod;
-            color: yellow;
-            margin-top: 0%;
-            border: 10px groove red;
-            padding-top: 20px;
-            margin: 10px;
-            height: 300px;
-            overflow-y: auto;
-        }
-        h1{
-            color: brown;
-            font-style: italic;
-            padding-left: 32%;
-        }
-        p{
-            padding: 35px;
-        }
-        .ak1{
-            margin: 10px;
-            background-color: aqua;
-            color: black;
-            margin-top: 0%;
-            max-width: 100%;
-            min-width: 40%;
-            border: 14px groove purple;
-            outline: 4px solid yellowgreen;
-            overflow-y: auto;
-        }
+     body{
+        background-color: coral;
+     }  
+     .parent{
+        background-color: blue;
+        height:300px;
+        width: 200px;
+        border: 7px solid black;
+     }
+     .noor{
+        background-color: aqua;
+        height: 100px;
+        width: 200px;
+        margin-top: 1%;
+        padding-top: 20px;
+        padding-left: 10px;
+        border: 5px solid black;
+     }
+     .alam{
+        background-color: blueviolet;
+        height: 50px;
+        width: 90px;
+        border: 3px solid blue;
+     }
     </style>
 </head>
 <body>
-    <div class="ak">
-        <h1>CSS:color and background properties</h1>
-        <p>Stimulate your mind as you test your typing speed with this standard English paragraph typing
-             test. Watch your typing speed and accuracy increase as you learn about a variety of new
-              topics! Over 40 typing test selections available.
-
-            If you don't like a test prompt, you can get a different (random) prompt with the "change test"
-             button - or select a specific paragraph to type from the list below. To find out how fast you
-              type, just start typing in the blank textbox on the right of the test prompt. You will see
-               your progress, including errors on the left side as you type. In order to complete the test
-                and save your score, you need to get 100% accuracy. You can fix errors as 
-                If you don't like a test prompt, you can get a different (random) prompt with the "change test"
-                button - or select a specific paragraph to type from the list below. To find out how fast you
-                 type, just start typing in the blank textbox on the right of the test prompt. You will see
-                  your progress, including errors on the left side as you type. In order to complete the test
-                   and save your score, you need to get 100% accuracy. You can fix errors as you go,  If you don't like a test prompt, you can get a different (random) prompt with the "change test"
-                   button - or select a specific paragraph to type from the list below. To find out how fast you
-                    type, just start typing in the blank textbox on the right of the test prompt. You will see
-                     your progress, including errors on the left side as you type. In order to complete the test
-                      and save your score, you need to get 100% accuracy. You can fix errors as you go,  If you don't like a test prompt, you can get a different (random) prompt with the "change test"
-                      button - or select a specific paragraph to type from the list below. To find out how fast you
-                       type, just start typing in the blank textbox on the right of the test prompt. You will see
-                        your progress, including errors on the left side as you type. In order to complete the test
-                         and save your score, you need to get 100% accuracy. You can fix errors as you go, you go, or correct
-                 them at the end with the help of the spell checker.</p>
-    </div>
-    <div class="ak1">
-        <h1>CSS:color and background properties</h1>
-        <p>Stimulate your mind as you test your typing speed with this standard English paragraph typing
-             test. Watch your typing speed and accuracy increase as you learn about a variety of new
-              topics! Over 40 typing test selections available.
-
-            If you don't like a test prompt, you can get a different (random) prompt with the "change test"
-             button - or select a specific paragraph to type from the list below. To find out how fast you
-              type, just start typing in the blank textbox on the right of the test prompt. You will see
-               your progress, including errors on the left side as you type. In order to complete the test
-                and save your score, you need to get 100% accuracy. You can fix errors as you go, or correct
-                 them at the end with the help of the spell checker.</p>
-    </div>
-    
-    
+    <h1>Wellcome to CSS</h1>
+   <div class="parent">
+    <h2>Brother </h2>
+    <p>my brother is my life</p>
+   </div> 
+  <div class="noor">
+    <div class="alam"></div>
+  </div> 
+   
 </body>
 </html>
